--- a/contribution.html
+++ b/contribution.html
@@ -38,7 +38,7 @@
 
       <br>
       <h2>2. Submit the Pull Request</h2>
-      <p>After editing <code>"data.js"</code>, push your changes to the main branch and open a pull request on GitHub.</p>
+      <p>After editing <code>"data.js"</code>, push your changes to the main branch and <a href="https://github.com/iwishdanwouldinsideme/H3-Hasan-Timeline/pulls">open a pull request</a> on GitHub.</p>
       <p>In your pull request description, please include a short summary of the event.
 
       <div class="callout success">
