--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 
   <script src="js/data.js"></script>
   <script src="js/timeline.js"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </body>
 </html>
