--- a/contribution.html
+++ b/contribution.html
@@ -26,8 +26,16 @@
   "title": "Event Title",
   "date": "YYYY-MM-DD",
   "description": "Brief description of what happened.",
-  "source": "https://example.com/source",
-  "sourceTitle": "Source Title"
+  "sources": [
+    {
+      "title": "Title of the source",
+      "url": "https://www.youtube.com/watch?v=example"
+    },
+    {
+      "title": "Title of the source",
+      "url": "https://twitter.com/example/status/1234567890"
+    }
+  ],
 }</code></pre>
 
       <div class="callout warning">
